{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 22,
  "lineage": "fb59ac8a-6669-9868-4f27-b99c8d0f0669",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:802539608101:vpc/vpc-08fba34ffe898f8fb",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e9c46c54f77e5fe6",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0fe6bba3f7bc4c732",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08fba34ffe898f8fb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bdec39ea846f34ae",
            "owner_id": "802539608101"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bot_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:802539608101:internet-gateway/igw-05e1f2e953ffabee6",
            "id": "igw-05e1f2e953ffabee6",
            "owner_id": "802539608101",
            "vpc_id": "vpc-0ecf7e66d74d9f182"
          },
          "dependencies": [
            "aws_vpc.bot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bot_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:802539608101:route-table/rtb-022fb9915414ec601",
            "id": "rtb-022fb9915414ec601",
            "owner_id": "802539608101",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e1f2e953ffabee6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ecf7e66d74d9f182"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.bot_igw",
            "aws_vpc.bot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bot_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031a4990b04e6a3bb",
            "route_table_id": "rtb-022fb9915414ec601",
            "subnet_id": "subnet-0504e2c12d957b5e8"
          },
          "dependencies": [
            "aws_internet_gateway.bot_igw",
            "aws_route_table.bot_route_table",
            "aws_subnet.bot_subnet",
            "aws_vpc.bot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bot_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:802539608101:security-group/sg-0223067c8b2297fd1",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0223067c8b2297fd1",
            "ingress": [],
            "name": "discord-echo-bot-sg",
            "name_prefix": "",
            "owner_id": "802539608101",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ecf7e66d74d9f182"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bot_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:802539608101:subnet/subnet-0504e2c12d957b5e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0504e2c12d957b5e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "802539608101",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ecf7e66d74d9f182"
          },
          "dependencies": [
            "aws_vpc.bot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bot_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:802539608101:vpc/vpc-0ecf7e66d74d9f182",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc2256f0e51dcb1a",
            "default_route_table_id": "rtb-03cc0b6c94f504ea1",
            "default_security_group_id": "sg-03c38756187021440",
            "dhcp_options_id": "dopt-0fe6bba3f7bc4c732",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ecf7e66d74d9f182",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03cc0b6c94f504ea1",
            "owner_id": "802539608101"
          }
        }
      ]
    }
  ]
}